@@ -1,4 +1,8 @@
-﻿drkns 01.07.2014 00:43:59 +0200 - build 3971
+﻿drkns 01.07.2014 12:29:19 +0200 - build 3972
+
+1. Продолжение 3970.
+
+drkns 01.07.2014 00:43:59 +0200 - build 3971
 
 1. VS14 по умолчанию считает, что %s - это char*, что, в принципе, правильно, но всё ломает.
    Хороший повод окончательно вычистить *printf, а пока определим _CRT_STDIO_LEGACY_WIDE_SPECIFIERS.
